WIP.Fix checkstyle